# diffuser-cli

./: .gitignore  CLAUDE.md  README.md  batch.example.json  batch.py  interactive.py  main.py  models.json.example  models.json.faceid  pyproject.toml  utils.py
tests/: test_batch.py  test_utils.py
