[project]
name = "diffuser-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.18.0",
    "opencv-python>=4.10.0",
    "peft>=0.13.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
